# project/routes/league.js
@@ -24,10 +24,15 @@ const guestMainPage =  async (req, res, next) => {
 router.get("/", async (req, res, next) => {
   try {
     const league_details = await league_utils.getLeagueDetails();
-    const userFavoriteGames = await users_utils.getFavoriteGames(req.session.user_id);
-    const gamesData = await game_utils.getGameUtils(userFavoriteGames)
+    const game_ids = await users_utils.getFavoriteGames(req.session.user_id);
+    let games_ids_array = [];
+    game_ids.map((element) => games_ids_array.push(element.game_id)); //extracting the players ids into array
+    //TODO:: check if game_ids is array
+    const currentDate = new Date()
+    let upcomingGames = await game_utils.getGameUtils(games_ids_array)
+    upcomingGames = upcomingGames.filter(game => new Date(game.gameDate) < currentDate)
     res.status(201)
-    res.send({league_details,gamesData});
+    res.send({league_details,upcomingGames});
   } catch (error) {
     next(error);
   }
